--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Galería de Autos Deportivos</title>
     <link rel="stylesheet" href="estilos.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<link  rel= "icon"  type= "image/png"  sizes= "16x16"  href= "/favicon-16x16.png" > 
+<link  rel= "manifest"  href= "/manifest.json" > 
+<meta  name= "msapplication-TileColor"  content= "#ffffff" > 
+<meta  name= "msapplication-TileImage"  content= "/ms-icon-144x144.png" > 
+<meta  name= "theme-color"  content= "#ffffff" >
 </head>
 <body>
 
@@ -57,3 +63,4 @@
 
 </body>
 </html>
+
